--- a/projects/cart/cart.html
+++ b/projects/cart/cart.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+   <meta charset="utf-8" />
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <title>Page Title</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+   <script src="main.js"></script>
 </head>
 <body>
-    <h2 style="color: red">Buy an item from the store</h2>
+<h2 style="color: blue;">Addition of two number</h2>
+  <form id="actionform">
+      <input type="text" id="val1">
+      <input type="text" id="val2">
+      <input type="submit" id="submit">
+  </form>
+<span id="result" ></span>
+<br>
+
+<h2 style="color: purple;">Check for the greatest number</h2>
+<form id="action">
+  <input type="text" id="val3">
+  <input type="text" id="val4">
+  <input type="text" id="val5">
+  <input type="submit" id="submit">
+</form>
+<span id="results" ></span>
+<br>
+
+<h2 style="color: brown;">Input your grade</h2>
+<form id="actions">
+<input type="text" id="val6">
+<input type="submit" id="click">
+</form>
+<span id="answer"></span>
+<br>
+
+<h2 style="color: red">Buy an item from the store</h2>
 <div id="store">
   <table>
     <tr>
@@ -52,7 +81,21 @@
   </table>
 </div>
 <br>
+
+<h2 style="color: orange;">Counting of simple interest</h2>
+<form id="simpl">
+  <h4>Please enter Principle amount</h4>
+  <input type="text" id="val8">
+  
+  <h4>Please enter Rate amount</h4>
+  <input type="text" id="val9">
+  <h4>Please enter Time(year)</h4>
+  <input type="text" id="val10">
+  <input type="submit" id="interest">
+</form>
+<span id="answer2"></span>
+<br>
 </body>
 <script src="jquery/js/jquery.js"></script>
 <script src="Action.js"></script>
-</html>
+</html
