--- a/projects/cart/cart.html
+++ b/projects/cart/cart.html
@@ -96,6 +96,6 @@
 <span id="answer2"></span>
 <br>
 </body>
-<script src="jquery/js/jquery.js"></script>
-<script src="Action.js"></script>
+<script src="assets/jquery/jquery.js"></script>
+<script src="cart.js"></script>
 </html
